# Metabuli

./: CMakeLists.txt  README.md  azure-pipelines.yml
data/: Invertebrate_Mitochondrial_Code.txt  Invertebrate_Mitochondrial_Code_15aa.txt  ancient_pattern.txt  reduced_15_pattern.txt  reduced_15_pattern_8mer.txt  standard_pattern.txt
lib/json/: CMakeLists.txt
lib/kaiju/src/: CMakeLists.txt  kaiju-convertNR.cpp
lib/kaiju/src/bwt/: mkbwt.c  mkbwt_vars.h
lib/mmseqs/src/taxonomy/: NcbiTaxonomy.cpp  NcbiTaxonomy.h
lib/prodigal/: dprog.cpp  node.cpp  prodigalsequence.cpp
src/: CMakeLists.txt  LocalCommandDeclarations.h  MetabuliBase.cpp  metabuli.cpp
src/benchmark/: CMakeLists.txt  makeBenchmarkSet.cpp  mergeAssemblyFiles.cpp
src/commons/: CMakeLists.txt  CandidateDBReader.cpp  CandidateDBReader.h  CandidateDBWriter.cpp  CandidateDBWriter.h  ClassificationResultRefiner.cpp  ClassificationResultRefiner.h  Classifier.cpp  Classifier.h  DeltaIdxReader.h  FileMerger.cpp  FileMerger.h  GeneticCode.h  IndexCreator.cpp  IndexCreator.h  Kmer.h  KmerBuffer.h  KmerExtractor.cpp  KmerExtractor.h  KmerMatcher.cpp  KmerMatcher.h  KmerScanner.cpp  KmerScanner.h  LocalParameters.cpp  LocalParameters.h  LocalUtil.cpp  LocalUtil.h  Match.h  MetamerPattern.cpp  MetamerPattern.h  ProdigalWrapper.cpp  ProdigalWrapper.h  QueryFilter.cpp  QueryIndexer.cpp  QueryIndexer.h  ReducedKmerMatcher.h  Reporter.cpp  Reporter.h  SeqIterator.cpp  SeqIterator.h  (+6 more)
src/functional/: CMakeLists.txt  FuncClassifier.cpp  FuncClassifier.h  FuncIndexer.cpp  FuncIndexer.h  FuncTaxonomer.cpp  FuncTaxonomer.h  KaijuWrapper.cpp  KaijuWrapper.h  ProteinDbIndexer.cpp  ProteinDbIndexer.h  ProteinDbSearcher.h
src/read-group/: GroupGenerator.cpp  GroupGenerator.h
src/uniref/: UnirefClassifier.cpp
src/util/: CMakeLists.txt  accession2taxid.cpp  accession2taxid.h  classifiedRefiner.cpp  count_common_kmers.cpp  create_common_kmer_list.cpp  create_unique_kmer_list.cpp  createnewtaxalist.cpp  database-report.cpp  evaluate-candidates.cpp  expand_diffidx.cpp  expand_diffidx_func.cpp  filter_by_genus.cpp  grade.cpp  ictv-challenge-format.cpp  inspect_db.cpp  ncbi2gtdb.cpp  printDeltaIdx.cpp  printinfo.cpp  seqHeader2TaxId.cpp
src/workflow/: CMakeLists.txt  add_to_library.cpp  assign-uniref.cpp  build.cpp  build_func.cpp  build_kaiju.cpp  build_uniref.cpp  classify-candidates.cpp  classify.cpp  create-tax-db.cpp  create-unirefdb.cpp  extract.cpp  groupGeneration.cpp  refine_report.cpp  updateDB.cpp
util/: build_osx.sh  build_windows.sh  convert_univec_core.sh
