cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(metabuli CXX C)

# if(MSVC)
#     add_compile_options(/std:c++17)
# else()
#     add_compile_options(-std=c++17)
# endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/lib/mmseqs/cmake")

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif ()

set(FRAMEWORK_ONLY 1 CACHE INTERNAL "" FORCE)
include(MMseqsSetupDerivedTarget)
add_subdirectory(lib/mmseqs)
add_subdirectory(lib/prodigal)
add_subdirectory(lib/fasta_validator)
add_subdirectory(lib/fastq_utils)
add_subdirectory(lib/yxml)
add_subdirectory(lib/json)
add_subdirectory(src)
add_subdirectory(data)
include_directories(lib)

